12/2/12
  Added number of open windows to desktop

11/2/12
  Fixed occasional flicker from focused windows' name in the bar
  Fine tuned fullscreen mode

7/2/12
  When changing desktops move cursor to center of current window before mapping

6/2/12
  Fixed flicker in the external text
  Fixed apps with tabs opening blank windows when opened on an unfocused desktop e.g. firefox

5/2/12
  Changed floating transient window behaviour to always be on top.
  Fixed last window not being mapped sometimes in fullscreen mode

4/2/12
  Added borders to transient windows

3/2/12
  Fix for bar length and master size not correcting after rc file is reread
  Added option in config.h.def to have the bar shown or not at startup but still toggleable

31/1/12
  Fix for bar text not updating when bar is covered and the uncovered

19/1/12
  Desktop switcher updates now when bar switched from top/bottom
  Changing border width does not affect the bar

16/1/12
  In the rc file a line starting with a hash (#) is ignored
  Added more options to the rc file
  Fix for mode not displaying correctly at startup if now window is opened

14/1/12
  Added alpha value for unfocused windows to be semi transparent when cairo-compmgr is used
  Alpha value can be set in the rc file

9/1/12
  Master area is reset if second last window is removed

7/1/12
  Fixed wm crash if not using status bar and resize of stack top window only if 3 or more windows
  Fix for window sizes after the window at the top of the stack has been resized
  Added limits on the area of the master window 
  Fix for thunderbird write window( and others probably) just unmapping

4/1/12
  Statusbar text now has 5 colours

29/12/11
  Statusbar takes text from stdin (e.g. conky)

29/12/11
  Added the tiling mode shown in the status bar

28/12/11
  Fixed rereading the rc file killing the wm or messing with the keyboard shortcuts

8/12/11
  Fixes for fullscreen mode

7/12/11
  Fix for fonts not displaying properly

6/12/11/