@@ -88,22 +88,19 @@ void update_bar() {
 
     for(i=0;i<DESKTOPS;i++)
         if(i != current_desktop) {
+            sprintf(busylabel, " %s", sb_bar[i].label);
             if(desktops[i].head != NULL) {
-                sprintf(busylabel, "%d:%s", desktops[i].numwins, sb_bar[i].label);
                 XSetWindowBackground(dis, sb_bar[i].sb_win, theme[2].color);
                 XClearWindow(dis, sb_bar[i].sb_win);
                 XDrawString(dis, sb_bar[i].sb_win, theme[1].gc, (sb_width-XTextWidth(fontbar, busylabel,strlen(busylabel)))/2, fontbar->ascent+1, busylabel, strlen(busylabel));
             } else {
-                sprintf(busylabel, " %s", sb_bar[i].label);
                 XSetWindowBackground(dis, sb_bar[i].sb_win, theme[1].color);
                 XClearWindow(dis, sb_bar[i].sb_win);
                 XDrawString(dis, sb_bar[i].sb_win, theme[1].gc, (sb_width-sb_bar[i].width)/2, fontbar->ascent+1, busylabel, strlen(busylabel));
             }
         } else {
-            if(desktops[i].head != NULL)
-                sprintf(busylabel, "%d:%s", desktops[i].numwins, sb_bar[i].label);
-            else
-                sprintf(busylabel, " %s", sb_bar[i].label);
+            if(desktops[i].mode == 1) sprintf(busylabel, "%d:%s", desktops[i].numwins, sb_bar[i].label);
+            else sprintf(busylabel, " %s", sb_bar[i].label);
             XSetWindowBackground(dis, sb_bar[i].sb_win, theme[0].color);
             XClearWindow(dis, sb_bar[i].sb_win);
             XDrawString(dis, sb_bar[i].sb_win, theme[1].gc, (sb_width-sb_bar[i].width)/2, fontbar->ascent+1, busylabel, strlen(busylabel));
