@@ -1,5 +1,6 @@
 12/2/12
-  Added number of open windows to desktop
+  Added number of open windows to focused desktop in fullscreen mode
+  Clicking on the current desktop in the switcher will focus the next window
 
 11/2/12
   Fixed occasional flicker from focused windows' name in the bar
